--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
       with:
-        tag_name: ${{ env.VERSION }}
+        tag_name: v${{ env.VERSION }}
         release_name: Release ${{ env.VERSION }}
         draft: false
         prerelease: false
