--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Get version
       id: get_version
       run: |
-        echo "VERSION=$(cat pyproject.toml | grep 'version = ' | sed 's/version = //g')" >> $GITHUB_ENV
+        echo "VERSION=v$(cat pyproject.toml | grep 'version = ' | sed 's/version = //g' | sed 's/"//g')" >> $GITHUB_ENV
 
     - name: Create Release
       id: create_release
@@ -33,7 +33,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
       with:
-        tag_name: v${{ env.VERSION }}
+        tag_name: ${{ env.VERSION }}
         release_name: Release ${{ env.VERSION }}
         draft: false
         prerelease: false
