--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ajs-scraper"
+name = "dynamic-scraper"
 version = "0.2.1"
 description = "Dynamic web scraper specifically designed for AnsularJS websites that runs at specified time intervals and notifies you about specific updates on the site"
 readme = "README.md"
@@ -40,7 +40,7 @@ dependencies = [
 "Bug Reports" = "https://github.com/P-ict0/AngularJS-Dynamic-Web-Scraper/issues"
 
 [project.scripts]
-ajs-scraper = "src.web_scraper:main"
+dynamic-scraper = "src.web_scraper:main"
 
 [tool.setuptools]
 packages = ["src.web_scraper", "src.web_scraper.utils"]
