--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "ajs-scraper"
 version = "0.2.1"
 description = "Dynamic web scraper specifically designed for AnsularJS websites that runs at specified time intervals and notifies you about specific updates on the site"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = "3.x"
 authors = [
     { name = "Rodrigo Martin Núñez", email = "rodrigomartinnunez@gmail.com" }
 ]
