--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,17 +15,24 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11' # Specify the Python version.
+        python-version: '3.x' # Specify the Python version.
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
+        pip install build
 
     - name: Get version
       id: get_version
       run: |
         echo "VERSION=v$(cat pyproject.toml | grep 'version = ' | sed 's/version = //g' | sed 's/"//g')" >> $GITHUB_ENV
+
+    - name: Get latest commit messages
+      id: get_commits
+      run: |
+        echo "COMMITS=$(git log $(git describe --tags --abbrev=0)..HEAD --pretty=format:'%h - %s (%an)')" >> $GITHUB_ENV
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
     - name: Create Release
       id: create_release
@@ -35,6 +42,10 @@ jobs:
       with:
         tag_name: ${{ env.VERSION }}
         release_name: Release ${{ env.VERSION }}
+        body: |
+          ### Description
+          This release includes the following changes:
+          ${{ env.COMMITS }}
         draft: false
         prerelease: false
   
