--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dynamic-scraper"
-version = "0.32"
+version = "0.4.0"
 description = "Dynamic web scraper specifically designed for AnsularJS websites that runs at specified time intervals and notifies you about specific updates on the site"
 readme = "README.md"
-requires-python = "3.x"
+requires-python = ">=3.10"
 authors = [
     { name = "Rodrigo Martin Núñez", email = "rodrigomartinnunez@gmail.com" }
 ]
