Append commit message to release body

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,11 @@ jobs:
       run: |
         echo "VERSION=v$(cat pyproject.toml | grep 'version = ' | sed 's/version = //g' | sed 's/"//g')" >> $GITHUB_ENV
 
+    - name: Get latest commit message
+      id: get-commit-message
+      run: echo "COMMIT_MESSAGE=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
+
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -35,5 +40,6 @@ jobs:
       with:
         tag_name: ${{ env.VERSION }}
         release_name: Release ${{ env.VERSION }}
+        body: ${{ env.COMMIT_MESSAGE }}
         draft: false
         prerelease: false
